objects/Account.object
<CustomObject>
    <fields>
        <fullName>AH_Emp_ID__c</fullName>
        <formula>Owner.AH_Employee_ID__c</formula>
        <label>AH Emp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_Name__c</fullName>
        <formula>Owner.AH_Name__c</formula>
        <label>AH Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_RC_Code__c</fullName>
        <formula>Owner.AH_RC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AH RC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH__c</fullName>
        <formula>CASE(Owner.Profile.Name, 
&quot;SME-RM&quot;, Owner.Manager.Manager.UserRole.Name, 
&quot;SME-TM&quot;, Owner.Manager.UserRole.Name, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMLO_List_Symbol__c</fullName>
        <formula>CASE ( TEXT( AMLO_List__c), 
&quot;No&quot;, IMAGE(&quot;/resource/GreenLight&quot;,&quot;&quot;,20,20), 
&quot;Yes&quot;, IMAGE(&quot;/resource/RedLight&quot;,&quot;&quot;,20,20), NULL)</formula>
        <label>AMLO List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMLO_List__c</fullName>
        <label>AMLO List</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agricultural_Retailer__c</fullName>
        <label>Agricultural Retailer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Customer_of_user_login__c</fullName>
        <description>ถ้า Owner หรือ Service_RM เป็นชื่อเดียวกับ User ที่ใช้ Login จะมีค่าเป็น &quot;Y&quot;</description>
        <formula>IF( OR(Owner_Name__c =  $User.FirstName &amp; &quot; &quot; &amp; $User.LastName,Service_RM__r.FirstName &amp;&quot; &quot;&amp; Service_RM__r.LastName =  $User.FirstName &amp; &quot; &quot; &amp; $User.LastName), &quot;Y&quot;, &quot;N&quot;)</formula>
        <label>All Customer of user login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Request_Ownership__c</fullName>
        <formula>NOT(OR(
RecordType.DeveloperName = &apos;SME_Prospect&apos;,
AND(NOT(Is_SME_Customer__c), RecordType.DeveloperName = &apos;SME_Customer&apos;)
))</formula>
        <label>Allow Request Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <formula>CASE( Owner.Profile.Name , 
&quot;SME-RM&quot;, Owner.Area_Name__c , 
&quot;SME-TM&quot;, Owner.Area_Name__c , 
&quot;SME-AH&quot;, Owner.Area_Name__c , 
&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetAccountReceivable__c</fullName>
        <description>ลูกหนี้การค้า</description>
        <label>Asset - Account Receivable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetCash__c</fullName>
        <description>เงินสด</description>
        <label>Asset - Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetCurrentAsset__c</fullName>
        <description>รวมสินทรัพย์หมุนเวียน</description>
        <label>Asset - Current Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetEtc2__c</fullName>
        <label>Asset - Etc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetEtc__c</fullName>
        <description>อื่นๆ</description>
        <label>Asset - Etc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetInventory__c</fullName>
        <description>สินค้าคงเหลือ</description>
        <label>Asset - Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetNonCurrentAsset__c</fullName>
        <description>รวมสินทรัพย์ไม่หมุนเวียน</description>
        <label>Asset - Non-Current Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetPropertyPlantAndEquipment__c</fullName>
        <description>ที่ดิน อาคารและอุปกรณ์</description>
        <label>Asset - Property, Plant and Equipment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetTotalAsset__c</fullName>
        <description>รวมสินทรัพย์</description>
        <label>Asset - Total Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefit_Spent__c</fullName>
        <label>Benefit Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate_Registration_Date__c</fullName>
        <label>Birthdate / Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Award__c</fullName>
        <label>Business Award</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Code_Name_EN__c</fullName>
        <label>Business Code Name (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Code_Name_TH__c</fullName>
        <label>Business Code Name (TH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Details__c</fullName>
        <label>Business Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Business Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Standard_Certificate__c</fullName>
        <label>Business Standard Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIS_Number__c</fullName>
        <formula>if(CIS__c != null, Value(CIS__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIS__c</fullName>
        <externalId>true</externalId>
        <label>CIS ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Convert_Prospect_Date__c</fullName>
        <description>Convert Prospect Date</description>
        <label>Convert Prospect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_Call_Report_RM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count RM Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Contacted_Call_Report__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Contacted Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Flag__c</fullName>
        <label>Credit Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Status_Symbol__c</fullName>
        <formula>CASE ( TEXT( Status__c ), 
&quot;Good Customer&quot;, IMAGE(&quot;/resource/GreenLight&quot;,&quot;Good&quot;,20,20), 
&quot;Bad Customer&quot;, IMAGE(&quot;/resource/RedLight&quot;,&quot;Bad&quot;,20,20),NULL)</formula>
        <label>Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criminal_Offense_Symbol__c</fullName>
        <formula>CASE ( TEXT( Criminal_Offense__c ), 
&quot;No&quot;, IMAGE(&quot;/resource/GreenLight&quot;,&quot;No&quot;,20,20), 
&quot;Yes&quot;, IMAGE(&quot;/resource/YellowLight&quot;,&quot;Yes&quot;,20,20), 
IMAGE(&quot;/resource/questionmark&quot;,&quot;null&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criminal Offense</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criminal_Offense__c</fullName>
        <label>Criminal Offense</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_AH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current AH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Current AH Name)</relationshipLabel>
        <relationshipName>AccountsCurrentAHName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Activity_By__c</fullName>
        <label>Current Activity By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Activity__c</fullName>
        <label>Current Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_NH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current NH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Current NH Name)</relationshipLabel>
        <relationshipName>AccountsCurrentNHName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Owner Extension</label>
        <referenceTo>User_Extension__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AccountsCurrentOwnerExtension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <formula>IF($User.Employee_ID__c =  Owner.Employee_ID__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Ratio__c</fullName>
        <label>Current Ratio</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Team Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Current Team Name)</relationshipLabel>
        <relationshipName>AccountsCurrentTeamName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_360__c</fullName>
        <formula>IF(OR( $Profile.Name = &quot;System Administrator&quot;, RecordType.DeveloperName = &quot;SME_Customer&quot;), 
HYPERLINK(&quot;/apex/CustomerInformation?id=&quot;+Id, IMAGE(&quot;/resource/1437648590000/CustSumm&quot;, &quot;&quot; ,21, 20)), &quot;&quot;)</formula>
        <label>360°</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Importance_Note__c</fullName>
        <label>Customer Importance Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Insight_Last_Modified_By__c</fullName>
        <label>Customer Insight Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Insight_Updated_Date__c</fullName>
        <label>Customer Insight Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Owner2__c</fullName>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp;  Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Owner_Changed_Date__c</fullName>
        <label>Customer Owner Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Owner_Release_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Owner Release Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <defaultValue>&quot;P&quot;</defaultValue>
        <label>Customer Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type_Code__c</fullName>
        <label>Customer Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>CASE(Customer_Type_Code__c , &quot;I&quot;, &quot;Individual&quot;, &quot;O&quot;, &quot;Organization&quot;, &quot;Undefined&quot;)</formula>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Visit_This_Year__c</fullName>
        <formula>IF( Number_of_Visited__c &gt; 0 &amp;&amp; YEAR(Last_Visited_Date__c) = YEAR(TODAY()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Visit This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Visited__c</fullName>
        <formula>If ( Number_of_Visited__c &gt; 0, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Visited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_s_Business_Code__c</fullName>
        <label>Customer&apos;s Business Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Ratio__c</fullName>
        <label>DE Ratio</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debt_Restructuring_Symbol__c</fullName>
        <formula>CASE ( TEXT( Debt_Restructuring__c ), 
&quot;No&quot;, IMAGE(&quot;/resource/GreenLight&quot;,&quot;No&quot;,20,20), 
&quot;Yes&quot;, IMAGE(&quot;/resource/YellowLight&quot;,&quot;Yes&quot;,20,20), 
IMAGE(&quot;/resource/questionmark&quot;,&quot;null&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debt Restructuring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt_Restructuring__c</fullName>
        <label>Debt Restructuring</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_Lead_Inform__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Lead_Sales__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Lead_ToDo__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type_Code__c</fullName>
        <label>Document Type Code</label>
        <picklist>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type_Prospect__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>บัตรประชาชน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หนังสือเดินทาง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ใบต่างด้าว</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เลขที่จดทะเบียนบริษัท</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWIFT BIC CODE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เลขที่ผู้เสียภาษี</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เอกสารอื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <formula>CASE(TEXT(Document_Type_Code__c),
&quot;11&quot;, &quot;บัตรประชาชน&quot;,
&quot;12&quot;, &quot;หนังสือเดินทาง&quot;,
&quot;13&quot;, &quot;ใบต่างด้าว&quot;,
&quot;21&quot;, &quot;เลขที่จดทะเบียนบริษัท&quot;,
&quot;22&quot;, &quot;SWIFT BIC CODE&quot;,
&quot;23&quot;, &quot;เลขที่ผู้เสียภาษี&quot;,
&quot;99&quot;, &quot;เอกสารอื่นๆ&quot;,
&quot; &quot;)</formula>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dual_Segment_Code__c</fullName>
        <label>Dual Segment Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dual_Segment_Date__c</fullName>
        <label>Dual Segment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dual_Sub_Segment_Code__c</fullName>
        <label>Dual Sub Segment Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDC_MPOS_Main_Bank__c</fullName>
        <label>EDC/MPOS - Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>KBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ธนชาติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อิสลาม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ออมสิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.เกียรตินาคิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ก.ส.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIMBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LHBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อ.ส.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EDC_MPOS_Other_Reason_for_not_use_KBank__c</fullName>
        <label>EDC/MPOS- Other Reason for not use KBank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDC_MPOS_Other_Reason_for_using_Main__c</fullName>
        <label>EDC/MPOS - Other Reason for using Main</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDC_MPOS_Reason_for_not_use_KBank__c</fullName>
        <label>EDC/MPOS - Reason for not use KBank</label>
        <picklist>
            <picklistValues>
                <fullName>อัตราค่าธรรมเนียมแพง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ระบบขัดข้องบ่อย</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>บริการหลังการขายไม่ดี</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EDC_MPOS_Reason_for_using_Main_Bank__c</fullName>
        <label>EDC/MPOS - Reason for  using Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>พึงพอใจในอัตราค่าธรรมเนียม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ระบบใช้งานดี ไม่มีปัญหาขัดข้อง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>มีบริการหลังการขายที่ดี</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Encrypt_Fullname_EN__c</fullName>
        <label>Encrypt Fullname EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Fullname_TH__c</fullName>
        <label>Encrypt Fullname TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Identification_No__c</fullName>
        <label>Encrypt Identification No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Middle_Name_EN__c</fullName>
        <label>Encrypt Middle Name (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Middle_Name_TH__c</fullName>
        <label>Encrypt Middle Name (TH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Name_EN__c</fullName>
        <label>Encrypt Name (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Name_TH__c</fullName>
        <label>Encrypt Name (TH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Surname_EN__c</fullName>
        <label>Encrypt Surname (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Surname_TH__c</fullName>
        <label>Encrypt Surname (TH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Title_EN__c</fullName>
        <label>Encrypt Title EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypt_Title_TH__c</fullName>
        <label>Encrypt Title TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX_TT_Main_Bank__c</fullName>
        <label>FX&amp;TT - Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>KBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ธนชาติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อิสลาม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ออมสิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.เกียรตินาคิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ก.ส.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIMBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LHBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อ.ส.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FX_TT_Other_Reason_for_not_use_KBank__c</fullName>
        <label>FX&amp;TT - Other Reason for not use KBank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX_TT_Other_Reason_for_using_Main_Bank__c</fullName>
        <label>FX&amp;TT - Other Reason for using Main Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX_TT_Reason_for_not_use_KBank__c</fullName>
        <label>FX&amp;TT - Reason for not use KBank</label>
        <picklist>
            <picklistValues>
                <fullName>อัตราค่าธรรมเนียมแพง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ระบบไม่สะดวกต่อการใช้บริการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>บริการไม่ดี</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FX_TT_Reason_for_using_Main_Bank__c</fullName>
        <label>FX&amp;TT - Reason for  using Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>พึงพอใจในอัตราค่าธรรมเนียม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ระบบใช้งานดี ไม่มีปัญหาขัดข้อง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>มีบริการที่ดี</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_Visited_Date__c</fullName>
        <label>First Visited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flag_to_Inidcate_Latest_Version__c</fullName>
        <label>Flag to Inidcate Latest Version</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Value__c</fullName>
        <label>High Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Ext_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Home Ext.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Fax_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Home Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ICR_Ratio__c</fullName>
        <label>ICR Ratio</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identification_No_Prospect__c</fullName>
        <inlineHelpText>Identification Number or Registration Number</inlineHelpText>
        <label>Identification No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_No__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;SME_Customer&quot;, 
IMAGE($Label.MashupUrl+Encrypt_Identification_No__c, &quot; &quot;), Identification_No_Prospect__c)</formula>
        <label>Identification No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_To_Bank_Last_1_Month__c</fullName>
        <label>Income To Bank (Last 1 Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_to_Bank_Last_Year__c</fullName>
        <label>Income to Bank (Last Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_to_Bank_This_Year__c</fullName>
        <label>Income to Bank (This Year)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_to_SME__c</fullName>
        <label>Income to SME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Classification_Code__c</fullName>
        <label>Industry Classification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Risk_Symbol__c</fullName>
        <formula>CASE ( TEXT( Industry_Risk__c), 
&quot;No&quot;, &quot;No&quot;, 
&quot;Yes&quot;, &quot;Yes&quot;,
&quot; &quot;)</formula>
        <label>Industry Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Risk__c</fullName>
        <label>Industry Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Info_for_PR_Interesting_Point__c</fullName>
        <label>Info for PR - Interesting Point</label>
        <picklist>
            <picklistValues>
                <fullName>เป็นสินค้าที่มีนวัตกรรม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>มีการออกแบบที่โดดเด่น ดึงดูดความสนใจ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>คัดวัตถุดิบคุณภาพสูงเมื่อเทียบกับคู่แข่ง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>มีนวัตกรรมด้านเทคโนโลยีการผลิต</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แบรนด์เป็นที่รู้จัก</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>การตลาดเฉพาะกลุ่ม (Niche Market)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>การบริหารต้นทุนที่ต่ำ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>บริการที่โดดเด่น</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ยึดหลักธรรมาภิบาล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ช่องทางการจำหน่ายที่ครอบคลุม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>